# rtagg

./: .gitignore  Cargo.toml  Changes.md  Makefile  README.md  test.yaml
.github/workflows/: compile.yaml
example/: main.yaml
example/services/: service_a.yml  service_b.yml
example/tags/: service_a.yml
examples/json/: main.json
examples/json/services/: service_a.json  service_b.json
examples/json/tags/: service_a.json
examples/yaml/: main.yaml
examples/yaml/services/: service_a.yml
examples/yaml/tags/: service_a.yml
src/: build_json.rs  build_json_test.rs  build_yaml.rs  build_yaml_test.rs  generator.rs  main.rs  readers.rs  test__inject_list_child.yaml  test__inject_list_result.yaml  test__inject_list_template.yaml  test__inject_map_template.yaml  test__inject_simple__child_template.yaml  test__inject_simple_template.yaml  test__no_inject.yaml  tests.rs  utils.rs
src/tests/: test__inject_list_template.json  test__inject_list_template.yaml  test__inject_map_child.yaml  test__inject_map_result.yaml  test__inject_map_template.json  test__inject_map_template.yaml  test__inject_simple_result.yaml
src/tests/json_files/: test__inject_list_child.json  test__inject_list_result.json  test__inject_list_template.json  test__inject_map_child.json  test__inject_map_result.json  test__inject_map_template.json
src/tests/yaml_files/: test__inject_complex.yaml  test__inject_list_template.yaml  test__inject_map_template.yaml
