[package]
name = "rtgen"
description="Template builer/aggregation tool"
version = "0.1.0"
edition = "2021"
respository="https://github.com/Antsthebul/rtagg"
license = "MIT"

[dependencies]
clap = { version = "4.5.31", features = ["derive", "unstable-doc"] }
regex = "1.11.1"
saphyr = "0.0.3"
serde = "1.0.219"
serde_json = "1.0.140"
